[package]
name = "heightmap_to_stl"
version = "0.1.0"
authors = ["DK99 <kaleb.dk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33.3", features = ["yaml"]}
image = "~0.23.12"
colour = "~0.5.0"
stl_io = "~0.5.2"