[package]
name = "heightmap_to_stl"
version = "0.1.0"
authors = ["DK99 <kaleb.dk@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "Convert a heightmap to stl triangles."
license = "GPL-3.0"
keywords = ["stl", "3d", "mesh", "heightmap", "image"]
repository = "https://github.com/DK99/heightmap_to_stl"

[lib]
name = "heightmap_to_stl"
path = "src/lib.rs"

[dependencies]
stl_io = "~0.5.2"